Fix the account tools alignment with o-grid 3.x

--- a/src/scss/header/_masthead.scss
+++ b/src/scss/header/_masthead.scss
@@ -7,6 +7,11 @@
 	@include oGridRespondTo(M) {
 		display: block;
 	}
+
+	&:before {
+			content: ' ';
+			display: table;
+	}
 }
 
 .next-header--light-on-dark {
